classDiagram
direction TB
    class Gnomo {
	    +Gnomo()
    }

    class Orco {
	    +Orco()
    }

    class Elfo {
	    +Elfo()
    }

    class Minotauro {
	    +Minotauro()
    }

    class Eroe {
	    -String ability
	    -int sete
	    -int fame
	    -int vita
	    +Eroe()
    }

    class Evento {
	    +personaggioBuono()
	    +oggettoBuono()
	    +personaggioCattivo()
	    +imprevistoCattivo()
    }

    class Gestore {
	    -Boolean modality
    }

    Eroe --|> Gnomo
    Eroe --|> Orco
    Eroe --|> Elfo
    Eroe --|> Minotauro
    Evento "0..*" *-- "1" Eroe
    Gestore .. Evento